{{$NEXT}}

0.18    2020-09-05

- Switched to GitHub Issues.


0.17    2020-09-05

- Fix pod formatting errors that hid some function documentation. Fixed by
  Olaf Alders. GH #10.


0.16    2020-02-29

- Updated copied docs from other modules to their latest versions.


0.15    2018-12-10

- Require List::UtilsBy 0.11 and include the docs from that version.

- Require List::SomeUtils 0.56 and include the docs from that version.


0.14    2017-02-07

- Re-release after git pull of some changes.


0.13    2017-02-07

- The docs for the subs from List::UtilsBy were repeated twice. Reported by
  Andy Lester. RT #120123.


0.12    2016-10-16

- Nothing from List::UtilsBy was actually being exported, because of a typo
  and a lack of testing. Reported by Greg Oschwald. GitHub #5.


0.11    2016-06-26

- Added List::UtilsBy to the list of included modules. Based on a patch from
  Yanick Champoux. GH #3.


0.10    2016-05-08

- Switched from List::MoreUtils to List::SomeUtils. This should not change any
  functionality of the module.

- Make the test for subroutine redefined warnings much more
  specific. Previously tests could fail because of totally unrelated warnings
  from other modules. Reported by ribasushi. RT #113740.


0.09    2014-10-05

- Clarify which of List::Util and List::MoreUtils wins when they both provide
  the same function. Requested by Karen Etheridge. RT #98560.


0.08    2014-04-01

- This version now works with both List::MoreUtils 0.28-0.33 and the latest
  trial version, 0.400_006. Note that it does not work with earlier versions
  of 0.400.


0.07    2013-10-14

- The last version totally broke all exports from List::MoreUtils. Now there
  are actual tests for this. Reported by Tatsuhiko Miyagawa. RT #89509.


0.06    2013-10-14

- List::Util 1.33 provides some subs that are also provided by
  List::MoreUtils. This caused subroutine redefeined warnings. List::AllUtils
  now only imports subs from List::MoreUtils that aren't defined by