@@ -40,6 +40,7 @@ stopwords = randomisation
 stopwords = specialisations
 stopwords = thusly
 stopwords = uniq
+stopwords = uniqint
 stopwords = uniqnum
 stopwords = uniqstr
 stopwords = unpairs
