@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- We now prefer the mesh() and zip() functions from List::SomeUtils over the
+  new, incompatible implementations in List::Util 1.56. Fixes GH #12.
+  reported by Greg Oschwald.
+
+
 0.18    2020-09-05
 
 - Switched to GitHub Issues.
